--- a/R1/r1_lab_intro_to_hf.ipynb
+++ b/R1/r1_lab_intro_to_hf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Intorduction to Hugging Face and Transformers Library**"
+    "# **Intorduction to 🤗 Hugging Face and Transformers Library**"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **learn about `pipeline` in Hugging Face transformers**\n",
+    "## **`pipeline` in Hugging Face transformers**\n",
     "``transformers`` 為 🤗Hugging face 提供的套件，讓開發者可以創建、使用 Hugging face hub 上 NLP、LLM 的模型</p>\n",
     "> Hugging face hub 上的模型不只有 transformer，任何人都可以上傳任何類型的模型或資料集\n",
     "\n",
@@ -62,23 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pprint import pprint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "No model was supplied, defaulted to distilbert/distilbert-base-uncased-finetuned-sst-2-english and revision af0f99b (https://huggingface.co/distilbert/distilbert-base-uncased-finetuned-sst-2-english).\n",
+      "No model was supplied, defaulted to distilbert-base-uncased-finetuned-sst-2-english and revision af0f99b (https://huggingface.co/distilbert-base-uncased-finetuned-sst-2-english).\n",
       "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
      ]
     },
@@ -88,7 +79,7 @@
        "[{'label': 'POSITIVE', 'score': 0.9998723268508911}]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,8 +92,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在 ner 任務中，模型會對所有字詞（token） 進行分類</p>\n",
+    "1. 該字詞（token）對應的 entity\n",
+    "2. score 機率值\n",
+    "3. 以及對應到文本的起始結束位置"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,11 +111,74 @@
      "output_type": "stream",
      "text": [
       "No model was supplied, defaulted to dbmdz/bert-large-cased-finetuned-conll03-english and revision f2482bf (https://huggingface.co/dbmdz/bert-large-cased-finetuned-conll03-english).\n",
-      "Using a pipeline without specifying a model name and revision in production is not recommended.\n",
-      "Some weights of the model checkpoint at dbmdz/bert-large-cased-finetuned-conll03-english were not used when initializing BertForTokenClassification: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
-      "- This IS expected if you are initializing BertForTokenClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertForTokenClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "788f68d9d0df4bc3866b3c191782a32e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading config.json:   0%|          | 0.00/998 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "35b1e99e60f547a7bcd44d220659fd22",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading pytorch_model.bin:   0%|          | 0.00/1.33G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "160c4c7f9a1b4fff9cf6ce66d72bf8b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading tokenizer_config.json:   0%|          | 0.00/60.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "db88b36bca84499aacc12f619bf77a2e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading vocab.txt:   0%|          | 0.00/213k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
@@ -129,13 +193,13 @@
       " {'end': 7,\n",
       "  'entity': 'I-ORG',\n",
       "  'index': 2,\n",
-      "  'score': 0.92930317,\n",
+      "  'score': 0.9293027,\n",
       "  'start': 2,\n",
       "  'word': '##gging'},\n",
       " {'end': 12,\n",
       "  'entity': 'I-ORG',\n",
       "  'index': 3,\n",
-      "  'score': 0.9763209,\n",
+      "  'score': 0.97632104,\n",
       "  'start': 8,\n",
       "  'word': 'Face'},\n",
       " {'end': 24,\n",
@@ -169,62 +233,29 @@
     "ner_pipe = pipeline(task=\"ner\", \n",
     "                # model='dslim/bert-base-NER'\n",
     "                )\n",
-    "pprint(ner_pipe(\"Hugging Face is a French company based in New York City.\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No model was supplied, defaulted to distilbert/distilbert-base-cased-distilled-squad and revision 626af31 (https://huggingface.co/distilbert/distilbert-base-cased-distilled-squad).\n",
-      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
-     ]
-    }
-   ],
-   "source": [
-    "qa_pipe = pipeline(task=\"question-answering\")"
+    "ner_pipe(\"Hugging Face is a French company based in New York City.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<details>\n",
-    "<summary>\n",
-    "Hint\n",
-    "</summary>\n",
+    "### **Practice #1**\n",
     "\n",
-    "`qa_pipe(question=...,\n",
-    "        context=...)`\n",
-    "\n",
-    "<details>\n",
-    "<summary>\n",
-    "Hint\n",
-    "</summary>\n",
-    "\n",
-    "`qa_pipe(question=\"What's the name of the repo\",\n",
-    "        context=\"the name of repo is bert-base-uncased\")`\n",
-    "\n",
-    "</details>\n",
-    "\n",
-    "\n",
-    "</details>\n"
+    "使用 question answering 以 pipeline 做 QA 任務：\n",
+    "- 文本：the name of repo is bert-base-uncased\n",
+    "- 目標：問模型 repo 的名稱\n",
+    "- 預期答案：bert-base-uncased"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO 使用 qa_pipe 回答以下問題\n",
-    "# question: What's the name of the repo\n",
-    "# context: the name of repo is bert-base-uncased"
+    "# TODO\n",
+    "\n"
    ]
   }
  ],
@@ -244,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
