--- a/R1/r1_lab_intro_to_hf.ipynb
+++ b/R1/r1_lab_intro_to_hf.ipynb
@@ -14,7 +14,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Intorduction to 🤗 Hugging Face and Transformers Library**"
+    "# **Intorduction to 🤗 Hugging Face and Transformers Library**\n",
+    "\n",
+    "[🤗 hugging face NLP course](https://huggingface.co/learn/nlp-course/chapter1/1)"
    ]
   },
   {
@@ -31,7 +33,7 @@
     "      - 語法分析：「他跑得快」-> 他（代詞）跑（動詞）得（副詞）快（形容詞）\n",
     "      - 命名實體 NER\n",
     "   3. **Sentence Generation**\n",
-    "      1. **填充遮蔽詞**：「像這種要求，我這輩子[mask]！」-> 沒聽過\n",
+    "      1. **填充遮蔽詞**：「像這種要求，我這輩子[mask]！」-> [mask] 預測為 沒聽過\n",
     "      2. **自動生成**：「今天天氣如何」-> 「今天天氣非常晴朗適合外出」\n",
     "      3. **翻譯**：「你好」-> 「Hello」\n",
     "      4. **摘要（問答）**\n",
@@ -242,10 +244,10 @@
    "source": [
     "### **Practice #1**\n",
     "\n",
-    "使用 question answering 以 pipeline 做 QA 任務：\n",
-    "- 文本：the name of repo is bert-base-uncased\n",
-    "- 目標：問模型 repo 的名稱\n",
-    "- 預期答案：bert-base-uncased"
+    "使用 question answering 以 `pipeline` 做 QA 任務：\n",
+    "- **給定文本**：the name of repo is bert-base-uncased\n",
+    "- **問題目標**：問模型 repo 的名稱\n",
+    "- **預期答案**：bert-base-uncased"
    ]
   },
   {
@@ -257,6 +259,155 @@
     "# TODO\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Behind `pipeline`｜🤗 USING TRANSFORMERS**\n",
+    "[🤗 NLP Course chapter 2](https://huggingface.co/learn/nlp-course/chapter2/2?fw=pt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Tokenizer**\n",
+    "如同其他 ML 模型、NLP 任務，處理文字資料時，模型無法直接處理原始資料，我們需要進行預處理將文本轉換為模型可以理解（吃）的數字格式，所以需要使用 **分詞器（tokenizer）**\n",
+    "\n",
+    "**Tokenizer 負責**\n",
+    "1. 將文本進行分\\斷詞，如果處理過文字資料，可以想像成 jieba 斷詞\n",
+    "2. 將斷詞結果轉換為數字序列（透過字典）\n",
+    "3. 添加特殊符號，（在此先不深入討論）\n",
+    "\n",
+    "在 transformers 中使用 `AutoTokenizer` 載入分詞器，每個模型都會有各自不同的斷詞演算法以及 mapping 到數字序列的字典，`AutoTokenizer` 使用 `.from_pretrained()` 方法透過傳入的 checkpoint 自動獲取對應的分詞器。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/llm/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/opt/conda/envs/llm/lib/python3.8/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "checkpoint = \"google-bert/bert-base-chinese\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(checkpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "斷詞結果(數字序列)： [101, 679, 1391, 5868, 5843, 679, 1402, 5868, 5843, 4649, 102]\n",
+      "將數字序列還原：[CLS] 不 吃 葡 萄 不 吐 葡 萄 皮 [SEP]\n"
+     ]
+    }
+   ],
+   "source": [
+    "docs = \"不吃葡萄不吐葡萄皮\"\n",
+    "tokenized_result = tokenizer(docs)\n",
+    "print(f\"斷詞結果(數字序列)： {tokenized_result['input_ids']}\")\n",
+    "print(f\"將數字序列還原：{tokenizer.decode(tokenized_result['input_ids'])}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Model**\n",
+    "與載入分詞器的方法一樣，利用 `AutoModel` 以 `.from_prerained()` 載入希望的模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/llm/lib/python3.8/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "===================================BUG REPORT===================================\n",
+      "Welcome to bitsandbytes. For bug reports, please run\n",
+      "\n",
+      "python -m bitsandbytes\n",
+      "\n",
+      " and submit this information together with your error trace to: https://github.com/TimDettmers/bitsandbytes/issues\n",
+      "================================================================================\n",
+      "bin /opt/conda/envs/llm/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda121.so\n",
+      "CUDA SETUP: CUDA runtime path found: /usr/local/cuda/lib64/libcudart.so\n",
+      "CUDA SETUP: Highest compute capability among GPUs detected: 7.5\n",
+      "CUDA SETUP: Detected CUDA version 121\n",
+      "CUDA SETUP: Loading binary /opt/conda/envs/llm/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda121.so...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/llm/lib/python3.8/site-packages/bitsandbytes/cuda_setup/main.py:149: UserWarning: /opt/conda/envs/llm did not contain ['libcudart.so', 'libcudart.so.11.0', 'libcudart.so.12.0'] as expected! Searching further paths...\n",
+      "  warn(msg)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "/opt/conda/envs/llm/lib/python3.8/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModel\n",
+    "model = AutoModel.from_pretrained(checkpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = tokenizer(docs, \n",
+    "                   return_tensors='pt')\n",
+    "outputs = model(**inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -275,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
