--- a/R1/r1_lab_intro_to_hf.ipynb
+++ b/R1/r1_lab_intro_to_hf.ipynb
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Practice #1**\n",
+    "### **練習 #1**\n",
     "\n",
     "使用 Extractive QA model 以 `pipeline` 做 question-answering 任務：\n",
     "- **給定文本**：the name of repo is bert-base-uncased\n",
@@ -187,12 +187,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Build chatbot with text-generation model and conversation class**"
+    "### **Build chatbot with text-generation model and conversation class**\n",
+    "\n",
+    "使用 text-generation model 與 Conversation 實作 chatbot</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -208,24 +210,10 @@
       " and submit this information together with your error trace to: https://github.com/TimDettmers/bitsandbytes/issues\n",
       "================================================================================\n",
       "bin /opt/conda/envs/llm/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda121.so\n",
-      "CUDA SETUP: CUDA runtime path found: /usr/local/cuda/lib64/libcudart.so\n",
+      "CUDA SETUP: CUDA runtime path found: /usr/local/cuda/targets/x86_64-linux/lib/libcudart.so\n",
       "CUDA SETUP: Highest compute capability among GPUs detected: 7.5\n",
       "CUDA SETUP: Detected CUDA version 121\n",
-      "CUDA SETUP: Loading binary /opt/conda/envs/llm/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda121.so...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/llm/lib/python3.8/site-packages/bitsandbytes/cuda_setup/main.py:149: UserWarning: /opt/conda/envs/llm did not contain ['libcudart.so', 'libcudart.so.11.0', 'libcudart.so.12.0'] as expected! Searching further paths...\n",
-      "  warn(msg)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "CUDA SETUP: Loading binary /opt/conda/envs/llm/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda121.so...\n",
       "cuda:0\n"
      ]
     }
@@ -234,11 +222,15 @@
     "from torch import cuda, bfloat16\n",
     "from transformers import pipeline\n",
     "from transformers import BitsAndBytesConfig, AutoConfig, AutoModelForCausalLM, AutoTokenizer\n",
-    "\n",
-    "model_id = 'MediaTek-Research/Breeze-7B-32k-Instruct-v1_0'\n",
-    "\n",
     "device = f'cuda:{cuda.current_device()}' if cuda.is_available() else 'cpu'\n",
     "print(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因為載入模型較大，使用 T4 GPU 時建議進行量化，以下程式"
    ]
   },
   {
@@ -247,6 +239,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model_id = 'MediaTek-Research/Breeze-7B-32k-Instruct-v1_0'\n",
+    "\n",
+    "\n",
     "bnb_config = BitsAndBytesConfig(\n",
     "    load_in_4bit=True,\n",
     "    bnb_4bit_quant_type='nf4',\n",
