--- a/R1/r1_lab_intro_to_hf.ipynb
+++ b/R1/r1_lab_intro_to_hf.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install python-dotenv\n",
+    "!pip install transformers\n",
+    "!pip install bitsandbytes\n",
+    "!pip install accelerate"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -14,7 +26,6 @@
     "from dotenv import load_dotenv, find_dotenv\n",
     "_ = load_dotenv(find_dotenv()) # read local .env file\n",
     "\n",
-    "os.environ['HUGGINGFACEHUB_API_TOKEN'] = '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'\n",
     "HF_TOKEN = os.getenv(\"HUGGINGFACEHUB_API_TOKEN\")"
    ]
   },
