修正作業程式碼

--- a/R1/R1-Lab-HF-Tutorial.ipynb
+++ b/R1/R1-Lab-HF-Tutorial.ipynb
@@ -85,7 +85,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **使用 pipeline 完成 nlp task**"
+    "### **使用 pipeline 完成常見 NLP 任務**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 情感分析 aka 分類問題"
    ]
   },
   {
@@ -123,7 +130,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在 ner 任務中，模型會對所有字詞（token） 進行分類</p>\n",
+    "2. 命名實體</p>\n",
+    "\n",
+    "\n",
+    "\n",
+    "在 ner 任務中，模型會對所有字詞（token） 進行分類，得到：</p>\n",
     "1. 該字詞（token）對應的 entity\n",
     "2. score 機率值\n",
     "3. 以及對應到文本的起始結束位置"
@@ -155,37 +166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "===================================BUG REPORT===================================\n",
-      "Welcome to bitsandbytes. For bug reports, please run\n",
-      "\n",
-      "python -m bitsandbytes\n",
-      "\n",
-      " and submit this information together with your error trace to: https://github.com/TimDettmers/bitsandbytes/issues\n",
-      "================================================================================\n",
-      "bin /opt/conda/envs/llm/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda121.so\n",
-      "CUDA SETUP: CUDA runtime path found: /usr/local/cuda/lib64/libcudart.so\n",
-      "CUDA SETUP: Highest compute capability among GPUs detected: 7.5\n",
-      "CUDA SETUP: Detected CUDA version 121\n",
-      "CUDA SETUP: Loading binary /opt/conda/envs/llm/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda121.so...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/llm/lib/python3.8/site-packages/bitsandbytes/cuda_setup/main.py:149: UserWarning: /opt/conda/envs/llm did not contain ['libcudart.so', 'libcudart.so.11.0', 'libcudart.so.12.0'] as expected! Searching further paths...\n",
-      "  warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO\n",
     "# practice 1 不需要特別指定模型，pipeline 預設載入 distilbert-base-cased-distilled-squad, \n",
@@ -198,34 +181,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Build chatbot with text-generation model and conversation class**\n",
-    "\n",
-    "使用 text-generation model 與 Conversation 實作 chatbot</p>"
+    "### **利用 Conversation class 與 text-generation model 實作 chatbot**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "===================================BUG REPORT===================================\n",
-      "Welcome to bitsandbytes. For bug reports, please run\n",
-      "\n",
-      "python -m bitsandbytes\n",
-      "\n",
-      " and submit this information together with your error trace to: https://github.com/TimDettmers/bitsandbytes/issues\n",
-      "================================================================================\n",
-      "bin /opt/conda/envs/llm/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda121.so\n",
-      "CUDA SETUP: CUDA runtime path found: /usr/local/cuda/targets/x86_64-linux/lib/libcudart.so\n",
-      "CUDA SETUP: Highest compute capability among GPUs detected: 7.5\n",
-      "CUDA SETUP: Detected CUDA version 121\n",
-      "CUDA SETUP: Loading binary /opt/conda/envs/llm/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda121.so...\n",
-      "cuda:0\n"
+      "cpu\n"
      ]
     }
    ],
@@ -241,7 +209,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "因為載入模型較大，使用 T4 GPU 時建議進行量化，以下程式"
+    "因為載入模型較大，使用 T4 GPU 時建議進行量化，以下程式為量化處理過程，</p>\n",
+    "在此先不贅述，有興趣的同仁可以參考 Huggingface 官方文件。</p>\n",
+    "\n",
+    "與前面範例不同的是，模型載入方法，我們透過 `AuToModelForCausalLM` 實例化模型，將其作為參數傳入 `pipeline`"
    ]
   },
   {
@@ -251,7 +222,6 @@
    "outputs": [],
    "source": [
     "model_id = 'MediaTek-Research/Breeze-7B-32k-Instruct-v1_0'\n",
-    "\n",
     "\n",
     "bnb_config = BitsAndBytesConfig(\n",
     "    load_in_4bit=True,\n",
@@ -285,15 +255,43 @@
     "chatbot = pipeline(\n",
     "    \"text-generation\", \n",
     "    model=hf_model, \n",
-    "    tokenizer=tokenizer,\n",
-    "    max_new_tokens=1024,\n",
+    "    tokenizer=tokenizer, # Tokenizer，要與模型匹配，主要提供 chat 模式時的特殊符號\n",
+    "    max_new_tokens=1024, # 模型最多可以生成多少字\n",
     "    return_full_text=False # 控制 pipeline 只輸出 AI Message\n",
     ")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "聊天式模型，例如 ChatGPT 其實基本上是透過 text-generation 作為基礎模型，進一步訓練模型能過聊天。\n",
+    "所以模型的選擇，我們可以在 Huggingface 上找到 text-generation 任務的模型，應該都可以支援。</p>\n",
+    "\n",
+    "比較特別的是，要做聊天任務時，模型需要一些特殊符號來區別每一段訊息是來自於 User 或是 AI 還是 System Prompt</p>\n",
+    "而各個模型的特殊符號不盡相同，需要去查閱官方文件。例如 Demo 使用的聯發科 Breeze 模型是透過 `[INST]` 、 `[/INST]` 以及 `<s>` 作為區隔。\n",
+    "所以我們在使用模型時，就會需要將文字加上這些特殊符號才能夠發揮模型聊天的能力。</p>\n",
+    "\n",
+    "通常我們會使用 list of dict 的方式處存聊天的記錄，使用 role 區別 user 與 ai，content 代表內容，而 Hugging face 的模型也支援這樣的格式，例如：\n",
+    "\n",
+    "\n",
+    "```\n",
+    "[\n",
+    "    {\"role\": \"user\", \"content\": \"嗨你好嗎\"},\n",
+    "    {\"role\": \"assistant\", \"content\": \"嗨您好，我是您的 AI 助理，很高興為您服務。\"},\n",
+    "    {\"role\": \"user\", \"content\": \"掰掰\"},\n",
+    "    {\"role\": \"assistant\", \"content\": \"掰掰，期待再相見\"},\n",
+    "\n",
+    "]\n",
+    "\n",
+    "```\n",
+    "\n",
+    "我們可以透過實例化 Conversation 這個 class，透過 `add_user_input` 與 `append_response` 新增歷史使用者輸入與模型回覆，將資料變為上述的資料格式再送給模型進行推理。\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
