完成 成 R1 Lab 作業

--- a/R1/R1-Lab-HF-Tutorial.ipynb
+++ b/R1/R1-Lab-HF-Tutorial.ipynb
@@ -186,18 +186,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/verdict/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cpu\n"
+      "\n",
+      "===================================BUG REPORT===================================\n",
+      "Welcome to bitsandbytes. For bug reports, please run\n",
+      "\n",
+      "python -m bitsandbytes\n",
+      "\n",
+      " and submit this information together with your error trace to: https://github.com/TimDettmers/bitsandbytes/issues\n",
+      "================================================================================\n",
+      "bin /opt/conda/envs/verdict/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda121.so\n",
+      "CUDA SETUP: CUDA runtime path found: /usr/local/cuda/targets/x86_64-linux/lib/libcudart.so\n",
+      "CUDA SETUP: Highest compute capability among GPUs detected: 7.5\n",
+      "CUDA SETUP: Detected CUDA version 121\n",
+      "CUDA SETUP: Loading binary /opt/conda/envs/verdict/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda121.so...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/verdict/lib/python3.8/site-packages/bitsandbytes/cuda_setup/main.py:149: UserWarning: /opt/conda/envs/verdict did not contain ['libcudart.so', 'libcudart.so.11.0', 'libcudart.so.12.0'] as expected! Searching further paths...\n",
+      "  warn(msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda:0\n"
      ]
     }
    ],
    "source": [
+    "from pprint import pprint\n",
+    "\n",
     "from torch import cuda, bfloat16\n",
     "from transformers import pipeline\n",
     "from transformers import BitsAndBytesConfig, AutoConfig, AutoModelForCausalLM, AutoTokenizer\n",
@@ -217,9 +254,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/verdict/lib/python3.8/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
+      "You set `add_prefix_space`. The tokenizer needs to be converted from the slow tokenizers\n",
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
+      "Loading checkpoint shards: 100%|██████████| 4/4 [01:53<00:00, 28.30s/it]\n",
+      "You are calling `save_pretrained` to a 4-bit converted model, but your `bitsandbytes` version doesn't support it. If you want to save 4-bit models, make sure to have `bitsandbytes>=0.41.3` installed.\n"
+     ]
+    }
+   ],
    "source": [
     "model_id = 'MediaTek-Research/Breeze-7B-32k-Instruct-v1_0'\n",
     "\n",
@@ -234,21 +285,21 @@
     "    model_id\n",
     ")\n",
     "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\n",
+    "    model_id)\n",
+    "\n",
     "hf_model = AutoModelForCausalLM.from_pretrained(\n",
     "    model_id,\n",
     "    trust_remote_code=True,\n",
     "    config=model_config,\n",
     "    quantization_config=bnb_config,\n",
     "    device_map='auto'\n",
-    ")\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    model_id)"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,59 +351,115 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "conversation.add_user_input(\"provided information: the name of repo is bert-base-uncased. Based on the provided information, what is the name of repo?\")"
+    "利用 `add_user_input` 新增 user 聊天記錄"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chatbot_result = chatbot(conversation.messages)[-1]['generated_text']\n",
-    "conversation.append_response(chatbot_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conversation.add_user_input(\"那什麼是 bert?\")\n",
-    "chatbot_result = chatbot(conversation.messages)[-1]['generated_text']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "' Bert是Bidirectional Embedding Representations from Transformers的缩写，是Google的一个自然语言处理模型。它基于Transformers架构，可以对文本数据学习语义表达，用于各种自然语言处理任务，如情感分析、命名实体识别、情况语言模型等。Bert模型通过预训练在大量的非任务专用数据上获得知识，然后在特定的任务上进行微调。'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "目前聊天記錄：[{'role': 'user', 'content': 'provided information: the name of repo is bert-base-uncased. Based on the provided information, what is the name of repo?'}]\n"
+     ]
     }
    ],
    "source": [
-    "chatbot_result"
+    "conversation.add_user_input(\"provided information: the name of repo is bert-base-uncased. Based on the provided information, what is the name of repo?\")\n",
+    "print(f\"目前聊天記錄：{conversation.messages}\") # conversation.messages 可以直接丟給 chatbot 得到回覆"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'generated_text': '根據提供的信息，repo的名称是\"bert-base-uncased\"。'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 將 conversation.messages 丟給 chatbot\n",
+    "chatbot_result = chatbot(conversation.messages)\n",
+    "print(chatbot_result)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Practi**"
+    "將 chatbot 的回覆以 `append_respons` 的方法加入 conversation 中"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "目前聊天記錄：[{'role': 'user', 'content': 'provided information: the name of repo is bert-base-uncased. Based on the provided information, what is the name of repo?'}, {'role': 'assistant', 'content': '根據提供的信息，repo的名称是\"bert-base-uncased\"。'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "conversation.append_response(chatbot_result[0]['generated_text'])\n",
+    "print(f\"目前聊天記錄：{conversation.messages}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "目前聊天記錄：[{'role': 'user', 'content': 'provided information: the name of repo is bert-base-uncased. Based on the provided information, what is the name of repo?'}, {'role': 'assistant', 'content': '根據提供的信息，repo的名称是\"bert-base-uncased\"。'}, {'role': 'user', 'content': '那什麼是 bert?'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "conversation.add_user_input(\"那什麼是 bert?\")\n",
+    "\n",
+    "print(f\"目前聊天記錄：{conversation.messages}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LLM 回覆：[{'generated_text': ' Bert是Bidirectional Embedding Representations from Transformers的缩写，是Google的一个自然语言处理模型。它基于Transformers架构，可以对文本数据学习语义表达，用于各种自然语言处理任务，如情感分析、命名实体识别、情况语言模型等。Bert模型通过预训练在大量的非任务专用数据上获得知识，然后在特定的任务上进行微调。'}]\n",
+      "----------\n",
+      "目前聊天記錄：[{'role': 'user', 'content': 'provided information: the name of repo is bert-base-uncased. Based on the provided information, what is the name of repo?'}, {'role': 'assistant', 'content': '根據提供的信息，repo的名称是\"bert-base-uncased\"。'}, {'role': 'user', 'content': '那什麼是 bert?'}, {'role': 'assistant', 'content': ' Bert是Bidirectional Embedding Representations from Transformers的缩写，是Google的一个自然语言处理模型。它基于Transformers架构，可以对文本数据学习语义表达，用于各种自然语言处理任务，如情感分析、命名实体识别、情况语言模型等。Bert模型通过预训练在大量的非任务专用数据上获得知识，然后在特定的任务上进行微调。'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "chatbot_result = chatbot(conversation.messages)\n",
+    "print(f\"LLM 回覆：{chatbot_result}\")\n",
+    "\n",
+    "print(\"-\"*10)\n",
+    "conversation.append_response(chatbot_result[0]['generated_text'])\n",
+    "print(f\"目前聊天記錄：{conversation.messages}\")"
    ]
   },
   {
@@ -360,31 +467,38 @@
    "metadata": {},
    "source": [
     "### **embedding model (feature extraction)**\n",
-    "[參考](https://huggingface.co/tasks/feature-extraction)"
+    "[參考](https://huggingface.co/tasks/feature-extraction)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Use a pipeline as a high-level helper\n",
-    "from transformers import pipeline\n",
+    "Embedding 是將文字轉換成向量的技術，使得文字可以在數學空間中表示。</p>這些向量捕捉了文字之間的語義關係，使得相似的文字在向量空間中更接近。常見的嵌入模型包括 Word2Vec、GloVe 和 BERT 等。\n",
     "\n",
-    "pipe = pipeline(\"feature-extraction\", model=\"facebook/bart-base\")"
+    "在 Retrieval-Augmented Generation (RAG) 中，我們會用 Embedding model 用來將查詢（query）和候選文檔（document）轉換成向量。</p>\n",
+    "通過計算這些向量的相似度，可以找出與查詢最相關的文檔。這些相關文檔隨後用來生成回答，增強生成模型的準確性和上下文相關性。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我們使用 sentence transformers 這個套件，可以從 [官方文檔](https://sbert.net/docs/pretrained_models.html) 尋找自己希望使用的 model，也可以在 hugging face 平台上搜尋支援 feature-extraction 的模型。</p>\n",
+    "\n",
+    "另外 hugging face 也提供 [embedding model](https://huggingface.co/spaces/mteb/leaderboard) 的排行榜給大家參考"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/envs/llm/lib/python3.8/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "/opt/conda/envs/verdict/lib/python3.8/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -397,7 +511,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.03142083, -0.01894771, -0.00766944, ..., -0.02039895,\n",
+       "       -0.01210877,  0.03742645], dtype=float32)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 利用 encode 得到 sentence 的 embedding\n",
+    "embedding_model.encode(\"哈囉，這是一個句子\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,8 +547,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "當我們有每個句子的 embedding 後就可以透過 cosine similarity 計算每個文本的相似度。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +576,8 @@
       "為什麼 ML 需要做正規化 vs Regularization is important! similarity: 0.8665976524353027\n",
       "為什麼 ML 需要做正規化 vs Dropout is important! similarity: 0.8055095672607422\n",
       "為什麼 ML 需要做正規化 vs Missing Data Handling is important! similarity: 0.8144524693489075\n",
-      "與 Query 最相關文本：Regularization is important!\n"
+      "==========\n",
+      "與「為什麼 ML 需要做正規化」最相似文本：Regularization is important!\n"
      ]
     }
    ],
@@ -453,7 +597,149 @@
     "        \n",
     "    print(f\"{query} vs {sentence} similarity: {sim}\")\n",
     "    \n",
-    "print(f\"與 Query 最相關文本：{most_related_sentence}\")"
+    "print(\"=\"*10)\n",
+    "print(f\"與「{query}」最相似文本：{most_related_sentence}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**作業 demo**\n",
+    "\n",
+    "利用 Hugging Face 的 text-generation model 與 Sentence Transformers embedding model 實作 QA 檢索聊天機器人。</p>\n",
+    "基於提供的資料集，使用 Embedding Cosine Similarity 檢索參考資料，再透過 LLM 生成答案。</p>\n",
+    "\n",
+    "1. Baseline\n",
+    "   - 將 demo 中的資料，替換成我們提供 or 自己的資料集\n",
+    "   - 能夠檢索相似資料\n",
+    "   - 基於檢索的資料進行回答\n",
+    "2. Advanced（Optional）\n",
+    "   - Embedding 怎麼儲存？每次都要重新計算嗎？\n",
+    "   - 該如何處理太久以前的歷史資料？\n",
+    "   - 利用 Gradio or Hugging Face Spaces 部署、分享 Chatbot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qa_data = [\n",
+    "    \"\"\"1. 入營注意事項：役男入營前無須先行理髮，待入營後統一安排理髮，再向役男收取費用\n",
+    "    2. 役男可攜帶手機(不得為大陸廠牌，且不提供充電)，部隊會集中保管，於每日夜間以定時定點方式使用。\n",
+    "    3. 營區不提供充電，建議攜帶拋棄式(手動)刮鬍刀；不可攜帶噴霧式液體。\n",
+    "    4. 役男可配戴隱形眼鏡，但因基礎訓練期間生活緊湊，而隱形眼鏡需相當時間消毒清洗，建議配戴鏡片眼鏡為宜，並可多備一副眼鏡，以供替換。\n",
+    "    \"\"\",\n",
+    "    \n",
+    "    \"\"\"報到入營時應該文件：\n",
+    "    1. 徵集令。\n",
+    "    2. 役男本人之國民身分證正本。\n",
+    "    3. 私章。\n",
+    "    4. 健保ＩＣ卡。\n",
+    "    5. 郵局存摺正面影本。\n",
+    "    6. 替代役役男輔導需求調查表。\n",
+    "    7. 個人特殊醫療用品。\n",
+    "    \"\"\",\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    替代役訓練天數\n",
+    "    基礎訓練：21天(含撥交日)。(自253梯次起修正)\n",
+    "    專業訓練：以各分發需用機關不同而有個不同期間的專業訓練。\n",
+    "    \"\"\",\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    折抵役期規定\n",
+    "    請備妥相關證明文件，如高中（職）以上各級學校經軍訓主管驗證加註折抵役期日數之成績單、大專集訓結訓證書、\n",
+    "    驗退（停役）證明書或軍事學校退學（開除）證明書等正本（驗證後退還）。82年次以前出生者，\n",
+    "    合計不得逾30日，83-93年次以後出生者，合計不得逾15日。已受軍事入伍訓練者，請於收到徵集令時，向戶籍地區公所提出免受基礎訓練申請。\n",
+    "    \"\"\",\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    要當兵時，健保要辦理轉出轉入嗎?\n",
+    "    即將入營服常備兵役之役男需持徵集令向全民健保加保單位辦理轉出，轉出日期填報「入營當月份」，轉入單位免填，後續將由國軍單位接續辦理後續轉入程序。\n",
+    "    \"\"\",\n",
+    "    \n",
+    "    \"\"\"當兵期間義務役薪水的入帳戶一定要郵局嗎?\n",
+    "    依現行規定目前有郵局、台新、土地銀行跟合作金庫這四家金融機構可使用。\"\"\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "import numpy as np\n",
+    "\n",
+    "def get_answer(query: str, source: List[str]):\n",
+    "    most_related_sentence = None\n",
+    "    max_similarity = 0\n",
+    "\n",
+    "    for sentence in source:\n",
+    "        sim = calculate_cosine_similarity(\n",
+    "        embedding_model.encode(query),\n",
+    "        embedding_model.encode(sentence)\n",
+    "        )\n",
+    "        \n",
+    "        if sim > max_similarity:\n",
+    "            most_related_sentence = sentence\n",
+    "            max_similarity = sim\n",
+    "            \n",
+    "    return most_related_sentence\n",
+    "\n",
+    "def calculate_cosine_similarity(vec1, vec2):\n",
+    "    return np.dot(vec1, vec2) / (np.linalg.norm(vec1) * np.linalg.norm(vec2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user: 我明天要去軍營報到，我應該要帶什麼文件\n",
+      "AI: 明天你要去軍營報到，你應該要帶以下文件：\n",
+      "\n",
+      "1. 徵集令\n",
+      "2. 役男本人之國民身分證正本\n",
+      "3. 私章\n",
+      "4. 健保IC卡\n",
+      "5. 郵局存摺正面影本\n",
+      "6. 替代役役男輔導需求調查表\n",
+      "7. 個人特殊醫療用品\n",
+      "\n",
+      "以上文件請務必備妥並確認後，明天前往軍營進行報到。\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_query = input(\">>>\")\n",
+    "conversation = Conversation()\n",
+    "\n",
+    "while user_query.lower() != \"bye\":\n",
+    "    print(f\"user: {user_query}\")\n",
+    "    # 尋找最相似的文件\n",
+    "    answer = get_answer(user_query, qa_data)\n",
+    "    llm_input = f\"\"\"請你基於以下資訊回答使用者的問題\n",
+    "    {answer}\n",
+    "    ===\n",
+    "    問題：{user_query}\n",
+    "    \"\"\"\n",
+    "    conversation.add_user_input(llm_input)\n",
+    "    # 將 conversation.messages 丟給 chatbot\n",
+    "    chatbot_result = chatbot(conversation.messages)[0]['generated_text']\n",
+    "    print(f\"AI: {chatbot_result}\")\n",
+    "    conversation.append_response(chatbot_result)\n",
+    "    \n",
+    "    user_query = input(\">>>\")\n",
+    "    "
    ]
   }
  ],
@@ -473,7 +759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
