修正作業程式碼

--- a/R1/R1-Lab-HF-Tutorial.ipynb
+++ b/R1/R1-Lab-HF-Tutorial.ipynb
@@ -186,52 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/verdict/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "===================================BUG REPORT===================================\n",
-      "Welcome to bitsandbytes. For bug reports, please run\n",
-      "\n",
-      "python -m bitsandbytes\n",
-      "\n",
-      " and submit this information together with your error trace to: https://github.com/TimDettmers/bitsandbytes/issues\n",
-      "================================================================================\n",
-      "bin /opt/conda/envs/verdict/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda121.so\n",
-      "CUDA SETUP: CUDA runtime path found: /usr/local/cuda/targets/x86_64-linux/lib/libcudart.so\n",
-      "CUDA SETUP: Highest compute capability among GPUs detected: 7.5\n",
-      "CUDA SETUP: Detected CUDA version 121\n",
-      "CUDA SETUP: Loading binary /opt/conda/envs/verdict/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda121.so...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/verdict/lib/python3.8/site-packages/bitsandbytes/cuda_setup/main.py:149: UserWarning: /opt/conda/envs/verdict did not contain ['libcudart.so', 'libcudart.so.11.0', 'libcudart.so.12.0'] as expected! Searching further paths...\n",
-      "  warn(msg)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda:0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pprint import pprint\n",
     "\n",
@@ -247,30 +204,16 @@
    "metadata": {},
    "source": [
     "因為載入模型較大，使用 T4 GPU 時建議進行量化，以下程式為量化處理過程，</p>\n",
-    "在此先不贅述，有興趣的同仁可以參考 Huggingface 官方文件。</p>\n",
+    "在此先不贅述，有興趣的可以參考 Hugging face 官方文件～</p>\n",
     "\n",
-    "與前面範例不同的是，模型載入方法，我們透過 `AuToModelForCausalLM` 實例化模型，將其作為參數傳入 `pipeline`"
+    "與前面範例不同的是，模型載入方法，我們透過 `AuToModelForCausalLM` 實例化模型，將其作為參數傳入 `pipeline`。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/verdict/lib/python3.8/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n",
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
-      "You set `add_prefix_space`. The tokenizer needs to be converted from the slow tokenizers\n",
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
-      "Loading checkpoint shards: 100%|██████████| 4/4 [01:53<00:00, 28.30s/it]\n",
-      "You are calling `save_pretrained` to a 4-bit converted model, but your `bitsandbytes` version doesn't support it. If you want to save 4-bit models, make sure to have `bitsandbytes>=0.41.3` installed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_id = 'MediaTek-Research/Breeze-7B-32k-Instruct-v1_0'\n",
     "\n",
@@ -759,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
