--- a/R1/R1-Lab-HF-Tutorial.ipynb
+++ b/R1/R1-Lab-HF-Tutorial.ipynb
@@ -635,7 +635,7 @@
     "    return most_related_sentence\n",
     "\n",
     "def calculate_cosine_similarity(vec1, vec2):\n",
-    "    return np.dot(vec1, vec2) / (np.linalg.norm(vec1) * np.linalg.norm(vec2))\n"
+    "    return np.dot(vec1, vec2) / (np.linalg.norm(vec1) * np.linalg.norm(vec2))"
    ]
   },
   {
