--- a/R1/R1-Lab-HF-Tutorial.ipynb
+++ b/R1/R1-Lab-HF-Tutorial.ipynb
@@ -9,7 +9,8 @@
     "!pip install python-dotenv\n",
     "!pip install transformers\n",
     "!pip install bitsandbytes\n",
-    "!pip install accelerate"
+    "!pip install accelerate\n",
+    "!pip install sentence_transformers"
    ]
   },
   {
@@ -702,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.undefined"
   }
  },
  "nbformat": 4,
