--- a/R2/R2-Langchain-Tutorial.ipynb
+++ b/R2/R2-Langchain-Tutorial.ipynb
@@ -47,14 +47,7 @@
    "metadata": {},
    "source": [
     "### 1. LLMs\n",
-    "若要使用 Huggingface 上的 Model 有兩種方法"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1.1 Huggingface Pipeline"
+    "透過 Langchain 載入 Huggingface 上的各種大型語言模型"
    ]
   },
   {
@@ -65,35 +58,28 @@
    "source": [
     "MODEL_NAME = \"MediaTek-Research/Breeze-7B-Instruct-v0_1\"\n",
     "\n",
+    "# 量化參數\n",
     "quantization_config = BitsAndBytesConfig(\n",
     "    load_in_4bit=True,\n",
     "    bnb_4bit_compute_dtype=torch.float16,\n",
     "    bnb_4bit_quant_type=\"nf4\",\n",
     "    bnb_4bit_use_double_quant=True)\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, use_fast=True)\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n",
-    "model = AutoModelForCausalLM.from_pretrained(\n",
-    "    MODEL_NAME,\n",
-    "    torch_dtype=torch.float16,\n",
-    "    trust_remote_code=True,\n",
-    "    device_map=\"auto\",\n",
-    "    quantization_config=quantization_config)\n",
-    "\n",
-    "generation_config = GenerationConfig.from_pretrained(MODEL_NAME)\n",
-    "generation_config.max_new_tokens = 1024\n",
-    "generation_config.temperature = 0.0001\n",
-    "generation_config.top_p = 0.95\n",
-    "generation_config.do_sample = True\n",
-    "generation_config.repetition_penalty = 1.15\n",
-    "\n",
-    "llm = HuggingFacePipeline(\n",
-    "    pipeline=pipeline(\n",
-    "        \"text-generation\",\n",
-    "        model=model,\n",
-    "        tokenizer=tokenizer,\n",
-    "        return_full_text=False,\n",
-    "        generation_config=generation_config))"
+    "# 模型初始化\n",
+    "llm = HuggingFacePipeline.from_model_id(\n",
+    "    model_id=MODEL_NAME,\n",
+    "    task=\"text-generation\",\n",
+    "    model_kwargs=dict(\n",
+    "        torch_dtype=torch.float16,\n",
+    "        trust_remote_code=True,\n",
+    "        device_map=\"auto\",\n",
+    "        quantization_config=quantization_config),\n",
+    "    pipeline_kwargs=dict(\n",
+    "        max_new_tokens=1024,\n",
+    "        temperature=0.0001,\n",
+    "        top_p=0.95,\n",
+    "        do_sample=True,\n",
+    "        repetition_penalty=1.15) )"
    ]
   },
   {
@@ -103,35 +89,12 @@
    "outputs": [],
    "source": [
     "prompt = \"\"\"\n",
-    "提問: 2023 年全球最賣座的電影是哪一部?\n",
+    "提問: 2022 年全球最賣座的電影是哪一部?\n",
     "\n",
     "Let's think step by step.\n",
     "\n",
     "解答: \"\"\"\n",
-    "llm(prompt)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1.2 Huggingface Hub"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 模型初始化\n",
-    "hub_llm = HuggingFaceHub(\n",
-    "    repo_id=MODEL_NAME,\n",
-    "    model_kwargs={\n",
-    "        'temperature': 1e-10,\n",
-    "        'max_new_tokens': 1024,\n",
-    "        'top_p': 0.95,\n",
-    "        'repetition_penalty': 1.15})"
+    "print(llm(prompt))"
    ]
   },
   {
@@ -146,7 +109,7 @@
     "Let's think step by step.\n",
     "\n",
     "解答: \"\"\"\n",
-    "hub_llm(prompt)"
+    "print(llm(prompt))"
    ]
   },
   {
@@ -177,8 +140,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 初始化提示詞模板\n",
     "prompt_template = PromptTemplate.from_template(\"告訴我一個笑話\")\n",
-    "prompt_template.format()"
+    "message = prompt_template.format()\n",
+    "\n",
+    "# 模型生成\n",
+    "print(llm(message))"
    ]
   },
   {
@@ -187,8 +154,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 初始化提示詞模板\n",
     "prompt_template = PromptTemplate.from_template(\"告訴我關於一個{content}的{adjective}笑話。\")\n",
-    "prompt_template.format(adjective=\"悲傷的\", content=\"數據科學家\")"
+    "message = prompt_template.format(adjective=\"悲傷的\", content=\"數據科學家\")\n",
+    "\n",
+    "# 模型生成\n",
+    "print(llm(message))"
    ]
   },
   {
@@ -276,13 +247,11 @@
     "prompt = PromptTemplate(template=template, input_variables=[\"question\"])\n",
     "\n",
     "# 使用 LLM Chain 將 Prompt 與 LLM 串接起來\n",
-    "llm_chain = LLMChain(\n",
-    "    prompt=\"提問: {question}\",\n",
-    "    llm=llm)\n",
+    "llm_chain = LLMChain(prompt=prompt, llm=llm)\n",
     "\n",
     "# 將問題透過參數化的方式帶入\n",
     "question = \"NBA 2023 年總冠軍球隊是誰?\"\n",
-    "llm_chain.invoke({\"question\": question})"
+    "print(llm_chain.invoke({\"question\": question})[\"text\"])"
    ]
   },
   {
@@ -298,10 +267,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 需要加入 Instruction 參數，才能告訴模型你的對話結束了\n",
     "prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
     "        (\"system\", \"你是一位專業的資料科學家和機器學習工程師，能夠提供專業的知識並準確地回答問題。\",),\n",
-    "        (\"human\", \"{question}\"),\n",
+    "        (\"human\", \"[INST]{question}[/INST]\\n\"),\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -309,7 +279,7 @@
     "llm_chain = prompt | llm | StrOutputParser()\n",
     "\n",
     "# 將問題透過參數化的方式帶入\n",
-    "llm_chain.invoke({\"question\": \"機器學習和深度學習有什麼不同？\"})"
+    "print(llm_chain.invoke({\"question\": \"機器學習和深度學習有什麼不同？\"}))"
    ]
   }
  ],
